# scrapy-prometheus-extensions

./: pyproject.toml
scrapy_prometheus_extensions/: scrapy_prometheus_gateway.py  scrapy_prometheus_push.py
